--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -226,7 +226,7 @@
 
 
                         <div id="wizard-view" class="col-lg-8 card-container flip">
-                            <style></style>
+                            <style><!-- render model css is injected here --></style>
                             <div class="card card-flip">
                                 <div class="front">
                                     <div class="card-body">
