--- a/frontend/static/html/model-a.html
+++ b/frontend/static/html/model-a.html
@@ -321,10 +321,10 @@
 	font-style: italic;
 	color: #999;
 }
-.model-a .components-container .card {
+.model-a .list-group-item.card {
 	flex: 1 1 auto;
 }
-.model-a .components-container .card-body {
+.model-a .list-group-item.card .card-body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -402,6 +402,11 @@
 .model-a .report-title {
 	font-size: 2em;
 	text-align: center;
+}
+
+/* composant : dataviz text */
+.model-a .report-text .report-text-text img {
+	max-width: 100%;
 }
 
 /* composant : dataviz map */
