--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -45,7 +45,7 @@
 
     <!-- HTML wrapper used as a container for dataviz|element components inside a bloc layout (cell or data) -->
     <template class="report-layout" id="wcell">
-        <div class="components-container d-flex flex-column">
+        <div class="components-container list-group">
             <!-- dataviz|element components are injected here -->
         </div>
     </template>
@@ -280,12 +280,6 @@
 }
 
 /* blocs et layouts */
-.model-b .report-bloc {
-/*	margin: 1em 0; */
-}
-.model-b .layout-cols + .layout-cols {
-/*	margin-top: 0.5em; */
-}
 .model-b .layout-cols {
 	margin-left: 0;
 	margin-right: 0;
@@ -320,7 +314,7 @@
 	text-align: center;
 	color: #999;
 }
-.model-b .components-container .card-body {
+.model-b .list-group-item.card .card-body {
 	width: 100%;
 	height: 100%;
 	padding: 0;
@@ -393,6 +387,11 @@
 .model-b .report-title {
 	font-size: 32px;
 	text-align: left;
+}
+
+/* composant : dataviz text */
+.model-b .report-text .report-text-text img {
+	max-width: 100%;
 }
 
 /* composant : dataviz map */
@@ -505,48 +504,28 @@
 	color: #eee;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media print {
-    @page {
-    size: A4 portrait;
-    -webkit-print-color-adjust: exact !important;   /* Chrome, Safari */
-    color-adjust: exact !important;
-  }
-  canvas {
-        min-height: 100%;
-        max-width: 100%;
-        max-height: 100%;
-        height: auto!important;
-        width: auto!important;
-    }
-    .printButton{
-        display: none !important;
-    }
-    .lyrow {
-        page-break-inside: avoid;
-    }
-    .model-b {
-        background-color: #ffffff;
-    }
+	@page {
+		/*size: A4 portrait;*/
+		color-adjust: exact !important;
+		-webkit-print-color-adjust: exact !important;
+	}
+	canvas {
+		min-height: 100%;
+		max-width: 100%;
+		max-height: 100%;
+		height: auto!important;
+		width: auto!important;
+	}
+	.printButton {
+		display: none !important;
+	}
+	.lyrow {
+		page-break-inside: avoid;
+	}
+	.model-b {
+		background-color: #ffffff;
+	}
 }
 
     </style>
