--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="wizard-panel" tabindex="-1" role="dialog" aria-labelledby="wizard-panel" aria-hidden="true" data-backdrop="static">
+<div class="modal fade wizard-panel" id="wizard-panel" tabindex="-1" role="dialog" aria-labelledby="wizard-panel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -8,10 +8,9 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <div class="container-fluid">
+            <div class="modal-body container-fluid">
                     <div class="row">
-                        <div id="wizard-parameters" data-dataviz="" class="col-lg-4">
+                        <div id="wizard-parameters" class="col-lg-4">
 
                                     <div class="attribute input-group mb-3">
                                         <div class="input-group-prepend">
@@ -31,12 +30,12 @@
                                         </select>
                                     </div>
                                     <nav class="nav nav-tabs">
-                                        <a class="nav-item nav-link show active" href="#w1" data-toggle="tab">Paramétrage</a>
-                                        <a class="nav-item nav-link show"        href="#w2" data-toggle="tab">Avancé</a>
+                                        <a class="nav-item nav-link active" href="#w_params_tab1" data-toggle="tab">Paramétrage</a>
+                                        <a class="nav-item nav-link"        href="#w_params_tab2" data-toggle="tab">Avancé</a>
                                     </nav>
 
-                                    <div id="dataviz-attributes" class="tab-content container mb-3">
-                                        <div class="tab-pane active" id="w1">
+                                    <div id="dataviz-attributes" class="tab-content container">
+                                        <div class="tab-pane active" id="w_params_tab1">
 
                                                     <div class="input-group input-group-sm mb-3 attribute type-figure">
                                                         <div class="input-group-prepend">
@@ -114,7 +113,7 @@
                                                     -->
 
                                         </div>
-                                        <div class="tab-pane" id="w2">
+                                        <div class="tab-pane" id="w_params_tab2">
 
                                                 <div class="input-group input-group-sm mb-3 attribute type-chart">
                                                     <div class="input-group-prepend">
@@ -215,7 +214,7 @@
                                         </div>
                                     </div><!-- End tab-content -->
 
-                                    <div class="mb-3">
+                                    <div class="mt-3">
                                         <button id="wizard-form-apply" class="btn btn-block mreport-primary-color-2-bg"
                                             title="Génération de la configuration JSON du dataviz et mise à jour de la prévisualisation HTML affichée">
                                             Appliquer les paramètres <i class="fas fa-angle-double-right"></i>
@@ -224,14 +223,12 @@
                         </div> <!-- End wizard-parameters-->
 
 
-
                         <div id="wizard-view" class="col-lg-8 card-container flip">
-                            <style><!-- render model css is injected here --></style>
                             <div class="card card-flip">
                                 <div class="front">
                                     <div class="card-body">
                                         <h6 class="card-title">Prévisualisation du rendu :</h6>
-                                        <div id="wizard-result" class="preloader"><!--code is injected here --></div>
+                                        <div class="dataviz-result preloader"><!--code is injected here --></div>
                                     </div>
                                 </div>
                                 <div class="back">
@@ -248,19 +245,16 @@
                             </div>
                         </div>
 
-
-
-                        <div class="row wizard-code">
-                            <div class="col">
-                                <div class="card">
-                                    <code class="card-body" id="wizard-code"><!--code is injected here --></code>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
 
-                </div>
+                    <div class="row wizard-code mt-3 hidden">
+                        <div class="col">
+                            <div class="card">
+                                <code class="card-body"><!--code is injected here --></code>
+                            </div>
+                        </div>
+                    </div>
+
             </div>
             <div class="modal-footer">
                 <button id="wizard-compose-save" class="btn mreport-primary-color-1-bg"><i class="fas fa-file-import"></i> Sauvegarder dans le rapport sélectionné</button>
