Wizard: détection des modifications en cours pour prise en compte avec le dialogue de fermeture + revue des boutons des modal wizard et dataviz-form et leurs boutons

--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -3,7 +3,10 @@
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Assitant de configuration : <tt><!-- dataviz id injected here --></tt></h5>
+                <h5 class="modal-title">
+                    <span class="badge mreport-grey1-bg">Assitant</span>
+                    <tt><!-- dataviz id injected here --></tt>
+                </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -257,9 +260,9 @@
 
             </div>
             <div class="modal-footer">
-                <button id="wizard-compose-save" class="btn mreport-primary-color-1-bg"><i class="fas fa-file-import"></i> Sauvegarder dans le rapport sélectionné</button>
-                <button id="wizard-default-save" class="btn mreport-primary-color-2-bg"><i class="fas fa-check"></i> Définir comme représentation par défaut</button>
-                <button type="button" class="btn mreport-primary-color-3-bg" data-dismiss="modal"><i class="fas fa-times-circle"></i> Fermer</button>
+                <button type="button" class="btn mreport-primary-color-2-bg btn-compose mr-auto" id="wizard-compose-save"><i class="fas fa-file-import"></i> Sauvegarder dans le rapport sélectionné</button>
+                <button type="button" class="btn btn-secondary btn-close" data-dismiss="modal"><i class="fas fa-times-circle"></i> Fermer</button>
+                <button type="button" class="btn mreport-primary-color-1-bg btn-save" id="wizard-default-save"><i class="fas fa-check"></i> Définir comme représentation par défaut</button>
             </div>
         </div>
     </div>
