Wizard: reload palettes des piklor sur onchange model + retouches css (responsive modal dataviz form & backdrop avec double ouverture de modal)

--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -1,4 +1,5 @@
-<html id="model-b" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
+<html id="model-b" data-colors="#006e76,#318d9d,#74bd9f,#bbded1,#d4eae2,#00753c,#00953b,#73ba64,#eaea8f,#e4efd2,#661100,#bf1b0d,#bf1b0d,#f39675,#f8c0ac,
+                                #312a6f,#4c3c90,#2e9ec2,#bee2e9,#d5ecf4,#d5ecf4,#f18700,#f7a600,#ffd000,#fed992,#000000,#69554e,#b59177,#d6c1b2,#f3eee6">
 
     <!-- HTML wrapper used to construct the main report container in the composer interface -->
     <template class="report-layout" id="wmain">
